# Robosim

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: test-reviewer.md
.claude/skills/: adding-a-feature.md  code-style.md  hal-shim.md  layer-1-robot-code.md  layer-2-control-system-backend.md  layer-3-device-bus-vendor-firmware.md  layer-4-physical-models.md  layer-5-world-physics.md  protocol-schema.md  protocol-session.md  rio-bench.md  robot-description-loader.md  tdd-workflow.md  tier1-shared-memory-transport.md  visualizer.md
.github/workflows/: ci.yml
cmake/: lint_gizmo_window_flags.cmake  lint_loader_finite_seam.cmake  lint_renderer_isolation.cmake
cmake/toolchains/: arm-rio.cmake
descriptions/: v0-arm.json
docs/: ARCHITECTURE.md  HAL_SHIM_NEXT_SURFACES_REPORT.md  OPEN_QUESTIONS.md  REFERENCES.md  STATUS_RIO_BENCH.md  STATUS_SIM_CORE.md  STATUS_VISUALIZER.md  V0_PLAN.md  VISUALIZER_V0_PLAN.md
references/rio2-hal-costs/: README.md
scripts/: build_and_run_timed_robot_smoke.sh  lint.sh  run_timed_robot_smoke.sh
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/common/: CMakeLists.txt  boot_descriptor.h  can_frame.h  can_status.h  clock_state.h  ds_state.h  error_message.h  joystick_output.h  notifier_state.h  power_state.h  protocol_session.cpp  protocol_session.h  protocol_version.h  sync_envelope.h  truncate.cpp  truncate.h  types.h  user_program_observer.h  validator.cpp  validator.h  validator_error.h
src/backend/shim/: CMakeLists.txt  hal_c.cpp  hal_c.h  hal_cpp_support.cpp  hal_jni.cpp  jni_minimal.h  shim_core.cpp  shim_core.h  shim_host_driver.cpp  shim_host_driver.h  timed_robot_smoke_host.cpp  timed_robot_smoke_host.h  timed_robot_smoke_host_main.cpp
src/backend/tier1/: CMakeLists.txt  shared_memory_transport.cpp  shared_memory_transport.h
src/backend/tier2/: CMakeLists.txt
src/bus/: CMakeLists.txt
src/bus/can/: CMakeLists.txt
src/description/: CMakeLists.txt  error.h  loader.cpp  loader.h  origin_pose.cpp  origin_pose.h  schema.h  serializer.cpp  serializer.h
src/log/: CMakeLists.txt
src/models/: CMakeLists.txt
src/models/electrical/: CMakeLists.txt
src/models/motors/: CMakeLists.txt
src/models/motors/kraken_x60/: CMakeLists.txt
src/models/sensors/: CMakeLists.txt
src/rng/: CMakeLists.txt
src/sim_core/: CMakeLists.txt
src/time/: CMakeLists.txt
src/util/: CMakeLists.txt
src/vendors/: CMakeLists.txt
src/vendors/phoenix6/: CMakeLists.txt
src/vendors/phoenix6/cancoder/: CMakeLists.txt
src/vendors/phoenix6/pigeon2/: CMakeLists.txt
src/vendors/phoenix6/talon_fx/: CMakeLists.txt
src/viz/: CMakeLists.txt  attachment.cpp  attachment.h  camera.cpp  camera.h  edit_mode_apply.cpp  edit_mode_apply.h  edit_mode_builder.cpp  edit_mode_builder.h  edit_session.cpp  edit_session.h  layout.cpp  layout.h  main.cpp  panels.cpp  panels.h  picking.cpp  picking.h  renderer.cpp  renderer.h  scene_snapshot.cpp  scene_snapshot.h
src/world/: CMakeLists.txt
src/world/dynamics/: CMakeLists.txt
src/world/engine/: CMakeLists.txt
src/world/engine/mujoco/: CMakeLists.txt
tests/: .clang-tidy  CMakeLists.txt
tests/backend/: CMakeLists.txt
tests/backend/common/: CMakeLists.txt  TEST_PLAN.md  compile_time_invariants_test.cpp  protocol_session_test.cpp  protocol_test.cpp  wpilib_mirror.h  wpilib_parity_test.cpp
tests/backend/shim/: CMakeLists.txt  TEST_PLAN.md  TEST_PLAN_CYCLE10.md  TEST_PLAN_CYCLE11.md  TEST_PLAN_CYCLE12.md  TEST_PLAN_CYCLE13.md  TEST_PLAN_CYCLE14.md  TEST_PLAN_CYCLE15.md  TEST_PLAN_CYCLE16.md  TEST_PLAN_CYCLE17.md  TEST_PLAN_CYCLE18.md  TEST_PLAN_CYCLE19.md  TEST_PLAN_CYCLE2.md  TEST_PLAN_CYCLE20.md  TEST_PLAN_CYCLE21.md  TEST_PLAN_CYCLE22.md  TEST_PLAN_CYCLE23.md  TEST_PLAN_CYCLE24.md  TEST_PLAN_CYCLE25.md  TEST_PLAN_CYCLE26.md  TEST_PLAN_CYCLE27.md  TEST_PLAN_CYCLE28.md  TEST_PLAN_CYCLE29.md  TEST_PLAN_CYCLE3.md  TEST_PLAN_CYCLE30.md  TEST_PLAN_CYCLE31.md  TEST_PLAN_CYCLE32.md  TEST_PLAN_CYCLE33.md  TEST_PLAN_CYCLE34.md  TEST_PLAN_CYCLE35.md  TEST_PLAN_CYCLE36.md  TEST_PLAN_CYCLE37.md  TEST_PLAN_CYCLE38.md  TEST_PLAN_CYCLE39.md  TEST_PLAN_CYCLE4.md  TEST_PLAN_CYCLE40.md  TEST_PLAN_CYCLE41.md  TEST_PLAN_CYCLE42.md  TEST_PLAN_CYCLE43.md  TEST_PLAN_CYCLE45.md  (+35 more)
tests/backend/shim/fixtures/: hal_jni_undefined_with_halsim.nm  hal_jni_undefined_without_halsim.nm
tests/backend/tier1/: CMakeLists.txt  TEST_PLAN.md  shared_memory_mapping_test.cpp  shared_memory_transport_test.cpp  test_helpers.h
tests/backend/tier2/: CMakeLists.txt
tests/bus/: CMakeLists.txt
tests/bus/can/: CMakeLists.txt
tests/description/: CMakeLists.txt  TEST_PLAN.md  TEST_PLAN_VC.md  loader_origin_test.cpp  loader_test.cpp  origin_pose_decompose_test.cpp  serializer_test.cpp
tests/log/: CMakeLists.txt
tests/models/: CMakeLists.txt
tests/models/electrical/: CMakeLists.txt
tests/models/motors/: CMakeLists.txt
tests/models/motors/kraken_x60/: CMakeLists.txt
tests/models/sensors/: CMakeLists.txt
tests/rng/: CMakeLists.txt
tests/sim_core/: CMakeLists.txt
tests/time/: CMakeLists.txt
tests/util/: CMakeLists.txt
tests/vendors/: CMakeLists.txt
tests/vendors/phoenix6/: CMakeLists.txt
tests/vendors/phoenix6/cancoder/: CMakeLists.txt
tests/vendors/phoenix6/pigeon2/: CMakeLists.txt
tests/vendors/phoenix6/talon_fx/: CMakeLists.txt
tests/viz/: CMakeLists.txt  TEST_PLAN.md  TEST_PLAN_VD.md  TEST_PLAN_VL.md  attachment_test.cpp  camera_test.cpp  edit_mode_apply_test.cpp  edit_mode_builder_test.cpp  edit_mode_builder_v2_test.cpp  edit_session_test.cpp  fixtures.cpp  fixtures.h  layout_test.cpp  picking_test.cpp  scene_snapshot_test.cpp  vd_e2e_test.cpp
tests/world/: CMakeLists.txt
tests/world/dynamics/: CMakeLists.txt
tests/world/engine/: CMakeLists.txt
tests/world/engine/mujoco/: CMakeLists.txt
tools/cad/: export_kraken_x60_mesh.py
tools/rio-bench/: README.md
tools/rio-bench/RioBenchmark/: TEST_PLAN.md  TEST_PLAN_RB_A.md  TEST_PLAN_RB_B.md  TEST_PLAN_RB_C.md
tools/timed-robot-template/.wpilib/: wpilib_preferences.json
(+28 files in other folders)
